# ChangeLog for dev-libs/cyrus-sasl
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.123 2005/05/23 17:31:50 ferdy Exp $

  23 May 2005; Fernando J. Pereda <ferdy@gentoo.org>
  cyrus-sasl-2.1.20-r3.ebuild:
  use tabs instead of spaces to indent

  23 May 2005; Fernando J. Pereda <ferdy@gentoo.org>
  cyrus-sasl-2.1.20-r3.ebuild:
  typo fixed, wrt #93636. Thanks to Jonathan Adamczewski <jadamcze@utas.edu.au>

*cyrus-sasl-2.1.20-r3 (20 May 2005)

  20 May 2005; Fernando J. Pereda <ferdy@gentoo.org>
  +files/saslauthd.pam-include, +cyrus-sasl-2.1.20-r3.ebuild:
  opempam compatibility, fixes #93167. Thanks to flameeyes

  05 May 2005; Sven Wegener <swegener@gentoo.org>
  cyrus-sasl-2.1.20-r2.ebuild:
  Added missing parentheses to SRC_URI.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  cyrus-sasl-2.1.20.ebuild:
  Stable on ppc.

  08 Apr 2005; Markus Rothe <corsair@gentoo.org> cyrus-sasl-2.1.20.ebuild:
  Stable on ppc64

  19 Feb 2005; Michael Hanselmann <hansmi@gentoo.org>
  cyrus-sasl-2.1.20.ebuild:
  Stable on hppa.

  17 Feb 2005; Jeremy Huddleston <eradicator@gentoo.org>
  cyrus-sasl-2.1.20-r2.ebuild:
  Multilib cleanup.

  15 Feb 2005; Fernando J. Pereda <ferdy@gentoo.org>
  -files/cyrus-sasl-ntlm_impl-spnego.patch.gz, cyrus-sasl-2.1.20-r2.ebuild:
  Move the ntlm patch out of the CVS

  15 Feb 2005; Fernando J. Pereda <ferdy@gentoo.org>
  cyrus-sasl-2.1.20-r2.ebuild:
  Add missing samba dependency

*cyrus-sasl-2.1.20-r2 (15 Feb 2005)

  15 Feb 2005; Fernando J. Pereda <ferdy@gentoo.org>
  +files/cyrus-sasl-2.1.19-checkpw.c.patch,
  +files/cyrus-sasl-ntlm_impl-spnego.patch.gz, +cyrus-sasl-2.1.20-r2.ebuild:
  Fix bugs #46038,#45181,#81970,#81342. Adding urandom,srp,crypt and
  ntlm_unsupported_patch use flags and its patches.

  06 Feb 2005; Joshua Kinard <kumba@gentoo.org> cyrus-sasl-2.1.20.ebuild:
  Marked stable on mips.
