@@ -1,0 +1,2 @@
+MD5 dde02db234dea892bee298390890502e cyrus-sasl-2.1.21.tar.gz 1584931
+MD5 9a8de902bf642a4f66007d07c16335ce cyrus-sasl-2.1.21-ntlm_impl-spnego.patch.gz 7465
