@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/cyrus-sasl
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.123 2005/05/23 17:31:50 ferdy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.124 2005/05/25 06:56:05 ferdy Exp $
+
+*cyrus-sasl-2.1.21 (25 May 2005)
+
+  25 May 2005; Fernando J. Pereda <ferdy@gentoo.org>
+  +cyrus-sasl-2.1.21.ebuild:
+  version bump, wrt #93772; also fixes #79864
 
   23 May 2005; Fernando J. Pereda <ferdy@gentoo.org>
   cyrus-sasl-2.1.20-r3.ebuild:
